[package]
name = "sandbox"
version = "0.1.0"
description = "A nifty JavaScript sandbox."
authors = ["Gianni Chiappetta <gianni@runlevel6.org>"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
Boa = "0.11.0"
libc = "0.2.102"
serde_json = "1.0.68"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["channel-api", "napi-6", "try-catch-api"]
